Fix navbar not closing on mobile when it should

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -201,14 +201,6 @@
   }
 }
 
-.dropdown-content {
-  position: absolute;
-  background-color: var(--light);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 2000;
-}
-
 blockquote {
   border-left: 2px solid var(--secondary);
   margin: 0.5em 5px;
